@@ -1,7 +1,4 @@
-# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.007.
-use strict;
-use warnings;
-
+# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use 5.008005;
 use Module::Build::Tiny 0.039;
 Build_PL();
