@@ -2,7 +2,7 @@ package Pandoc::Filter;
 use strict;
 use warnings;
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 use JSON;
 use Carp;
