@@ -2,7 +2,7 @@ package Pandoc::Walker;
 use strict;
 use warnings;
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 use Scalar::Util qw(reftype blessed);
 use parent 'Exporter';
